# AI_Drone_Detector

./: .gitmodules
.cache/clangd/index/: CameraConsumer.cpp.08CC959FF6AE0BBA.idx  CameraConsumer.h.CC09722F0D5658D4.idx  CameraLoader.cpp.000E3D128F7066E3.idx  CameraLoader.h.11A20DCB2FF1CA06.idx  CameraProducer.cpp.C1E16A9A3C59557F.idx  CameraProducer.h.600CBBC5EF385D31.idx  Main.cpp.2D5354433B029DBA.idx  RingBufferQueue.cpp.E13ACC2FDFF152FF.idx  RingBufferQueue.h.3C235C4F5B9CF1E2.idx  YoloProcessor.cpp.13E22B01D44E7E06.idx  YoloProcessor.h.647C37F819A79214.idx  alloc_traits.h.0E76F588BE260167.idx  allocated_ptr.h.4148ABB3721C53A4.idx  array.E14CEE433EA69F2E.idx  async.hpp.50BC954B2BF82886.idx  atomic_base.h.A7982DBD7A7168C3.idx  auto_ptr.h.5555BD1624B2338C.idx  base.hpp.7FE763127CBE4A5C.idx  basic_file.h.5036DA2AC5AAC225.idx  basic_ios.h.AF86E13E7CF08519.idx  basic_ios.tcc.9EF7CF8B1B65B55C.idx  basic_string.h.144678BE22AF041D.idx  basic_string.tcc.2932C17546005643.idx  bessel_function.tcc.717C4081D3B392E4.idx  beta_function.tcc.6AA0619B865242FC.idx  (+115 more)
AiTrainer/Scripts/: ai_trainer.py  export_onnx.py
Dev/: CMakeLists.txt  Main.cpp  Makefile  cmake_install.cmake  compile_commands.json
Dev/CameraConsumer/: CameraConsumer.cpp  CameraConsumer.h
Dev/CameraProducer/: CameraProducer.cpp  CameraProducer.h
Dev/RingBufferQueue/: RingBufferQueue.cpp  RingBufferQueue.h
Dev/ToolChains/: toolchain-win.cmake
Dev/YoloProcessor/: YoloProcessor.cpp  YoloProcessor.h
drone_dataset/: data.yaml
drone_dataset/train/: labels.cache
drone_dataset/valid/: labels.cache
(+2 files in other folders)
